force-app/main/default/objects/FA_EXMOPTC_Cons__c/FA_EXMOPTC_Cons__c.object-meta.xml
<CustomObject>
    <label>FA EXMOPTC_Cons</label>
    <nameField>
        <label>FA EXMOPTC_Cons</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>FA EXMOPTC_Cons</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>