force-app/main/default/objects/FA_EXMOPTC_Cons__c/fields/BrinellHardness__c.field-meta.xml
<CustomField>
    <fullName>BrinellHardness__c</fullName>
    <label>BrinellHardness</label>
    <length>255</length>
    <type>Text</type>
</CustomField>