force-app/main/default/objects/FA_EXMOPTC_Cons__c/fields/DyePenetrant__c.field-meta.xml
<CustomField>
    <fullName>DyePenetrant__c</fullName>
    <label>DyePenetrant</label>
    <length>255</length>
    <type>Text</type>
</CustomField>