force-app/main/default/objects/FA_EXMOPTC_Cons__c/fields/FilletWeldLP__c.field-meta.xml
<CustomField>
    <fullName>FilletWeldLP__c</fullName>
    <label>FilletWeldLP</label>
    <length>255</length>
    <type>Text</type>
</CustomField>