force-app/main/default/objects/FA_EXMOPTC_Cons__c/fields/Intergranular_Corrosion__c.field-meta.xml
<CustomField>
    <fullName>Intergranular_Corrosion__c</fullName>
    <label>Intergranular Corrosion</label>
    <length>255</length>
    <type>Text</type>
</CustomField>