force-app/main/default/objects/FA_EXMOPTC_Cons__c/fields/VisualCasting__c.field-meta.xml
<CustomField>
    <fullName>VisualCasting__c</fullName>
    <label>VisualCasting</label>
    <length>255</length>
    <type>Text</type>
</CustomField>