force-app/main/default/objects/FA_EXMOPTC_Cons__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>PTC__c</columns>
    <columns>Radiography__c</columns>
    <columns>BrinellHardness__c</columns>
    <columns>CharpyImpact__c</columns>
    <columns>DyePenetrant__c</columns>
    <columns>FilletWeldLP__c</columns>
    <columns>Intergranular_Corrosion__c</columns>
    <columns>Ultrasonic__c</columns>
    <columns>VisualCasting__c</columns>
    <columns>MagneticParticle__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>